# slack-codex-bridge

./: .gitignore  LICENSE  README.md  README.zh-CN.md  environment.yml  pyproject.toml
src/slack_codex_bridge/: __init__.py  app.py  attachments.py  audit.py  codex_client.py  config.py  instance_lock.py  risk.py  session_store.py
src/slack_codex_bridge.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
tests/: test_attachments.py  test_codex_client.py  test_instance_lock.py  test_risk.py  test_session_store.py
