[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "slack-codex-bridge"
version = "0.1.0"
description = "Control a local Codex CLI session from Slack."
requires-python = ">=3.12"
dependencies = [
  "slack-bolt>=1.22.0,<2",
]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
